-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 17, 18, 19, 20
-
Component/s: hotspot
-
b25
-
x86_64
-
linux
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8298834 | 17.0.7-oracle | Tobias Hartmann | P3 | Resolved | Fixed | b01 |
| JDK-8299816 | 17.0.7 | Goetz Lindenmaier | P3 | Resolved | Fixed | b01 |
jdk/incubator/vector/Vector512ConversionTests.java
Here's a snippet from the log file:
1541 CallStaticJavaDirect === 1548 1874 1881 15 0 10671 9054 9056 9061 9053 8757 9055 0 8759 9057 0 0 9040 8823 8872 0 1312 10154 1319 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 9056 0 1697 0 0 0 0 0 0 0 0 1884 1547 0 0 0 0 10263 1546 1885 1885 0 0 0 0 0 0 0 0 0 1886 1545 1544 1543 0 0 0 10668 10668 10667 9068 10485 [[ 1542 1540 1887 1893 6726 ]] Static java.util.Objects::requireNonNull # java/lang/Object * ( java/lang/Object * ) ByteVector::compareTemplate @ bci:1 (line 1748) Byte512Vector::compare @ bci:5 (line 351) Byte512Vector::compare @ bci:3 (line 41) AbstractShuffle::checkIndexes @ bci:24 (line 127) ByteVector::rearrangeTemplate @ bci:1 (line 2102) Byte512Vector::rearrange @ bci:7 (line 412) Byte512Vector::rearrange @ bci:2 (line 41) ByteVector::sliceTemplate @ bci:55 (line 2018) Byte512Vector::slice @ bci:2 (line 384) Byte512Vector::slice @ bci:2 (line 41) AbstractVector::convertShapeTemplate @ bci:234 (line 371) Byte512Vector::convertShape @ bci:4 (line 248) AbstractVector::castShape @ bci:31 (line 287) AbstractVectorConversionTest::conversion_kernel @ bci:374 (line 449) !jvms: AbstractVectorConversionTest::copyConversionArray @ bci:32 (line 341) AbstractVectorConversionTest::conversion_kernel @ bci:232 (line 438)
# To suppress the following error report, specify this argument
# after -XX: or in .hotspotrc: SuppressErrorAt=/buildOopMap.cpp:360
#
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (/opt/mach5/mesos/work_dir/slaves/ff806ead-2cac-495d-9cbc-62116f99bf14-S13789/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/ae9b8a50-11b3-4a62-a0eb-42987b013aa3/runs/28902ab3-8bff-4d06-9390-2e68644510f4/workspace/open/src/hotspot/share/opto/buildOopMap.cpp:360), pid=21626, tid=21654
# assert(false) failed: there should be a oop in OopMap instead of a live raw oop at safepoint
#
# JRE version: Java(TM) SE Runtime Environment (18.0+21) (fastdebug build 18-ea+21-1331)
# Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 18-ea+21-1331, mixed mode, sharing, compressed oops, compressed class ptrs, g1 gc, linux-amd64)
# Problematic frame:
# V [libjvm.so+0x6ade32] OopFlow::build_oop_map(Node*, int, PhaseRegAlloc*, int*)+0x832
#
# Core dump will be written. Default location: Core dumps may be processed with "/opt/core.sh %p" (or dumping to /opt/mach5/mesos/work_dir/slaves/ff806ead-2cac-495d-9cbc-62116f99bf14-S13709/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/c9e82747-30a9-4a0c-9a72-f2f5a94976d9/runs/b9f1c0fc-fcac-4687-870e-f54d4e6c2394/testoutput/test-support/jtreg_open_test_jdk_jdk_vector/scratch/0/core.21626)
#
# An error report file with more information is saved as:
# /opt/mach5/mesos/work_dir/slaves/ff806ead-2cac-495d-9cbc-62116f99bf14-S13709/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/c9e82747-30a9-4a0c-9a72-f2f5a94976d9/runs/b9f1c0fc-fcac-4687-870e-f54d4e6c2394/testoutput/test-support/jtreg_open_test_jdk_jdk_vector/scratch/0/hs_err_pid21626.log
#
# Compiler replay data is saved as:
# /opt/mach5/mesos/work_dir/slaves/ff806ead-2cac-495d-9cbc-62116f99bf14-S13709/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/c9e82747-30a9-4a0c-9a72-f2f5a94976d9/runs/b9f1c0fc-fcac-4687-870e-f54d4e6c2394/testoutput/test-support/jtreg_open_test_jdk_jdk_vector/scratch/0/replay_pid21626.log
#
# If you would like to submit a bug report, please visit:
# https://bugreport.java.com/bugreport/crash.jsp
#
----------System.err:(1/55)----------
WARNING: Using incubator modules: jdk.incubator.vector
----------rerun:(41/6340)*----------
Here's the crashing thread's stack:
--------------- T H R E A D ---------------
Current thread (0x00007f607c1fb3c0): JavaThread "C2 CompilerThread2" daemon [_thread_in_native, id=21654, stack(0x00007f609c6c1000,0x00007f609c7c2000)]
Current CompileTask:
C2: 4258 732 AbstractVectorConversionTest::conversion_kernel (436 bytes)
Stack: [0x00007f609c6c1000,0x00007f609c7c2000], sp=0x00007f609c7bcb20, free space=1006k
Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [libjvm.so+0x6ade32] OopFlow::build_oop_map(Node*, int, PhaseRegAlloc*, int*)+0x832
V [libjvm.so+0x6ae819] OopFlow::compute_reach(PhaseRegAlloc*, int, Dict*)+0x339
V [libjvm.so+0x6b0a52] PhaseOutput::BuildOopMaps()+0x1a82
V [libjvm.so+0x159e64f] PhaseOutput::Output()+0xd2f
V [libjvm.so+0x9f8dc7] Compile::Code_Gen()+0x427
V [libjvm.so+0xa05148] Compile::Compile(ciEnv*, ciMethod*, int, bool, bool, bool, bool, bool, DirectiveSet*)+0x1668
V [libjvm.so+0x81f946] C2Compiler::compile_method(ciEnv*, ciMethod*, int, bool, DirectiveSet*)+0x646
V [libjvm.so+0xa154b9] CompileBroker::invoke_compiler_on_method(CompileTask*)+0xd09
V [libjvm.so+0xa16158] CompileBroker::compiler_thread_loop()+0x518
V [libjvm.so+0x188e25c] JavaThread::thread_main_inner()+0x27c
V [libjvm.so+0x1894810] Thread::call_run()+0x100
V [libjvm.so+0x1574004] thread_native_entry(Thread*)+0x104
- backported by
-
JDK-8298834 CheckCastPP with raw oop input floats below a safepoint
-
- Resolved
-
-
JDK-8299816 CheckCastPP with raw oop input floats below a safepoint
-
- Resolved
-
- relates to
-
JDK-8271600 C2: CheckCastPP which should closely follow Allocate is sunk of a loop
-
- Resolved
-
-
JDK-8252372 Check if cloning is required to move loads out of loops in PhaseIdealLoop::split_if_with_blocks_post()
-
- Resolved
-
-
JDK-8372649 C2 compilation fails with "there should be an oop in OopMap instead of a live raw oop at safepoint"
-
- Open
-
- links to
-
Commit
openjdk/jdk17u-dev/d784aaef
-
Commit
openjdk/jdk/cd9c688b
-
Review
openjdk/jdk17u-dev/1028
-
Review
openjdk/jdk/10932