8276064: CheckCastPP with raw oop input floats below a safepoint

Reviewed-by: kvn, vlivanov, roland